--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ header{
   background-color: #cee4fa;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
@@ -128,6 +129,17 @@ ul li{
 }
 
 .ingredients h4,
-.ingredients ul li {
-  padding: 3px;
+.ingredients ul {
+  padding: 5px;
+  margin: 0;
+}
+
+main > p{
+  flex-grow: 1;
+  min-width: 150px;
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 2px;
+  border-radius: 5px;
+  text-align: center;
 }
